--- a/.github/workflows/Build-R2S.yml
+++ b/.github/workflows/Build-R2S.yml
@@ -166,7 +166,7 @@ jobs:
         mv -f $OPENWRT_PATH/bin/packages/*/*/*.ipk packages
         tar -zcf Packages.tar.gz packages
         rm -rf packages feeds.buildinfo version.buildinfo
-        mv "openwrt-rockchip-armv8-friendlyarm_nanopi-r2s-squashfs-sysupgrade.img.gz" "openwrt-${{ env.FILE_DATE }}-r2s-squashfs-sysupgrade.img.gz"
+        mv "openwrt-rockchip-armv8-friendlyarm_nanopi-r2s-squashfs-sysupgrade.img.gz" "openwrt-$(date +"%Y.%m.%d-%H.%M")-r2s-squashfs-sysupgrade.img.gz"
         echo "KERNEL=$(cat *.manifest | grep ^kernel | cut -d- -f2 | tr -d ' ')" >> $GITHUB_ENV
         echo "FIRMWARE_PATH=$PWD" >> $GITHUB_ENV
 
